# AMR_CleaningRobot

./: LICENSE  README.md  X_GNN.ipynb
CleaningRobot_ws/: frames.gv
CleaningRobot_ws/.catkin_tools/profiles/default/: devel_collisions.txt
CleaningRobot_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
CleaningRobot_ws/devel/.private/bringup/: .catkin
CleaningRobot_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
CleaningRobot_ws/devel/lib/bringup/: dynamic_link_camera  enable  localize
CleaningRobot_ws/devel/lib/nav_plan_objavoid/: remap
CleaningRobot_ws/devel/lib/navigation/: remap
CleaningRobot_ws/devel/lib/pkgconfig/: bringup.pc  catkin_tools_prebuild.pc  nav_plan_objavoid.pc  navigation.pc  robot_settings.pc
CleaningRobot_ws/devel/lib/robot_settings/: dynamic_link_camera  enable  localize
CleaningRobot_ws/devel/share/bringup/cmake/: bringupConfig-version.cmake  bringupConfig.cmake
CleaningRobot_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
CleaningRobot_ws/devel/share/nav_plan_objavoid/cmake/: nav_plan_objavoidConfig.cmake
CleaningRobot_ws/devel/share/navigation/cmake/: navigationConfig.cmake
CleaningRobot_ws/logs/bringup/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.048.log.stderr  build.symlink.000.log.stderr  build.symlink.001.log.stderr  build.symlink.051.log.stderr
CleaningRobot_ws/logs/catkin_tools_prebuild/: build.cmake.000.log.stderr  build.symlink.000.log.stderr
CleaningRobot_ws/src/: README.md
CleaningRobot_ws/src/bringup/launch/: master.launch
CleaningRobot_ws/src/bringup/protos/: Cam_robot.proto
CleaningRobot_ws/src/bringup/src/: sensor_enable.cpp
CleaningRobot_ws/src/bringup/worlds/: .4_wheels_robot_fully_loaded.wbproj  .home.wbproj  home.wbt
CleaningRobot_ws/src/nav_plan_objavoid/: CMakeLists.txt
CleaningRobot_ws/src/nav_plan_objavoid/config/: Common_Costmap.yaml  global_costmap_params.yaml
CleaningRobot_ws/src/nav_plan_objavoid/config/global/: Global_Costmap.yaml
CleaningRobot_ws/src/nav_plan_objavoid/config/local/: TrajectoryPlanner_Local.yaml
CleaningRobot_ws/src/nav_plan_objavoid/launch/: navigation_planning.launch
CleaningRobot_ws/src/navigation/config/: global_costmap_params.yaml  local_costmap_params.yaml
CleaningRobot_ws/src/navigation/launch/: move_base.launch  navigation_planning.launch
CleaningRobot_ws/src/navigation/rviz/: nav.rviz
CleaningRobot_ws/src/robot_settings/: CMakeLists.txt  package.xml
CleaningRobot_ws/src/robot_settings/include/: sensor_enable.h  static_camera.h
CleaningRobot_ws/src/robot_settings/launch/: master.launch
CleaningRobot_ws/src/robot_settings/src/: localization.cpp  sensor_enable.cpp  static_camera.cpp
CleaningRobot_ws/src/robot_settings/worlds/: .home.wbproj
bringup/src/: sensor_enable.cpp
bringup/worlds/: home_2.wbt
nav_plan_objavoid/config/global/: Dijkstra_NavfnROS_Planner_Global.yaml
nav_plan_objavoid/config/local/: Local_Costmap.yaml
nav_plan_objavoid/launch/: navigation_planning.launch
nav_plan_objavoid/rviz/: nav.rviz
robot_settings/launch/: master.launch
robot_settings/robot_description/launch/: CleaningRobot.launch
robot_settings/rviz/launch/: CleaningRobot_viz.launch
robot_settings/src/: localization.cpp  sensor_enable.cpp  static_camera.cpp
src/nav_plan_objavoid/: package.xml
src/nav_plan_objavoid/include/: remapping.h
src/nav_plan_objavoid/src/: remapping.cpp
src/robot_settings/: CMakeLists.txt  package.xml
src/robot_settings/include/: localization.h  sensor_enable.h
src/robot_settings/rviz/rviz_cfg/: CleaningRobot_viz.rviz
src/robot_settings/worlds/: .Home.wbproj
(+14 files in other folders)
