<?xml version="1.0"?>

<package format="2">
  <name>nav_plan_objavoid</name>
  <version>0.0.0</version>
  <description>The nav_plan_objavoid package that has the role to handle the nav_plan_objavoid, planning and object_avoidance through MoveBase.</description>

  <maintainer email="alessioborgi3@gmail.com">AlessioBorgi</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <depend>webots_ros</depend>

  <exec_depend>amcl</exec_depend>
  <exec_depend>base_local_planner</exec_depend>
  <exec_depend>carrot_planner</exec_depend>
  <exec_depend>clear_costmap_recovery</exec_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>fake_localization</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>move_slow_and_clear</exec_depend>
  <exec_depend>navfn</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>rotate_recovery</exec_depend>
  <exec_depend>voxel_grid</exec_depend>

</package>
