<?xml version="1.0"?>

<package format="2">

  <name>robot_settings</name>
  <version>0.0.0</version>
  <description>The robot_settings package that handles all that concerns the Robot, from Localization, to its dynamics.</description>
  <maintainer email="borgialessio01@gmail.com">Alessio Borgi</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <depend>webots_ros</depend>
  <build_depend>robot_state_publisher</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
